--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^2.1.1",
     "element-ui": "^2.8.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
