--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql": "^2.17.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "vant": "^2.0.0-beta.4",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
