--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.2.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "vant": "^2.0.0-beta.4",
