--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "url-loader": "^1.1.2",
     "vant": "^2.0.0-beta.4",
     "vue": "^2.6.10",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
