--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "vue-waterfall-easy": "^2.4.4",
     "webpack-cli": "^3.0.0"
   },
   "dependencies": {
@@ -22,7 +23,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^2.1.1",
-    "element-ui": "^2.8.2",
+    "element-ui": "^2.10.1",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "file-loader": "^3.0.1",
@@ -32,7 +33,7 @@
     "nodemailer": "^6.2.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "vant": "^2.0.0-beta.4",
+    "vant": "^2.0.9",
     "vue": "^2.6.10",
     "vue-infinite-scroll": "^2.0.2",
     "vue-loader": "^15.7.0",
