--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
