--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vant": "^2.0.9",
     "vue": "^2.6.10",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-jsonp": "^0.1.8",
     "vue-loader": "^15.7.0",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
