--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "js-md5": "^0.7.3",
+    "mavon-editor": "^2.7.6",
     "mysql": "^2.17.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
