--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-md5": "^0.7.3",
     "mavon-editor": "^2.7.6",
     "mysql": "^2.17.1",
+    "socket.io": "^2.3.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "vant": "^2.1.7",
