--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
     "presets":["env","stage-0"],
-    "plugins":["transform-runtime"]
+    "plugins":[
+        "transform-runtime",
+        ["import", {
+        "libraryName": "vant",
+        "libraryDirectory": "es",
+        "style": true
+        }]
+    ]
 }
