--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-import": "^1.12.2",
     "vue-waterfall-easy": "^2.4.4",
     "webpack-cli": "^3.0.0"
   },
