--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "webpack-demo",
+  "name": "janesbook",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack-dev-server  "
+    "dev": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Elric",
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-import": "^1.12.2",
-    "vue-waterfall-easy": "^2.4.4",
-    "webpack-cli": "^3.0.0"
+    "vue-waterfall-easy": "^2.4.4"
   },
   "dependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/runtime": "^7.7.2",
     "axios": "^0.19.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^2.1.1",
@@ -42,7 +41,8 @@
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.9.4"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
