--- a/package.json
+++ b/package.json
@@ -1,44 +1,42 @@
 {
-  "name": "janesbook",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "dev": "webpack-dev-server"
-  },
-  "author": "Elric",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-plugin-import": "^1.12.2",
-    "vue-waterfall-easy": "^2.4.4"
-  },
-  "dependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/runtime": "^7.7.2",
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^2.1.1",
-    "element-ui": "^2.11.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "js-md5": "^0.7.3",
-    "mavon-editor": "^2.7.6",
-    "socket.io": "^2.3.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
-    "vant": "^2.1.7",
-    "vue": "^2.6.10",
-    "vue-infinite-scroll": "^2.0.2",
-    "vue-loader": "^15.7.0",
-    "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
-  }
+    "name": "janesbook",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack",
+        "dev": "webpack-dev-server"
+    },
+    "author": "Elric",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.19.0",
+        "@babel/core": "^7.0.0",
+        "@babel/plugin-transform-runtime": "^7.6.2",
+        "@babel/preset-env": "^7.7.1",
+        "@babel/runtime": "^7.7.2",
+        "babel-plugin-import": "^1.13.0",
+        "babel-loader": "^8.0.6",
+        "css-loader": "^2.1.1",
+        "element-ui": "^2.11.1",
+        "file-loader": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "js-md5": "^0.7.3",
+        "mavon-editor": "^2.7.6",
+        "socket.io": "^2.3.0",
+        "style-loader": "^0.23.1",
+        "url-loader": "^1.1.2",
+        "vant": "^2.1.7",
+        "vue": "^2.6.10",
+        "vue-infinite-scroll": "^2.0.2",
+        "vue-waterfall-easy": "^2.4.4",
+        "vue-loader": "^15.7.0",
+        "vue-router": "^3.0.6",
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.1.1",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.9.0"
+    }
 }
